# twitchx

./: .coverage  .gitignore  AGENTS.md  AGENTS.md.archive  CLAUDE.md  Makefile  README.md  app.py  config.example.json  main.py  pyproject.toml  ruff.toml  run.sh
.claude/: launch.json  settings.local.json
core/: chat.py  constants.py  kick.py  launcher.py  oauth_server.py  platform.py  platforms.py  recorder.py  storage.py  stream_resolver.py  third_party_emotes.py  twitch.py  utils.py  watch_stats.py
core/chats/: base.py  kick_chat.py  twitch_chat.py  youtube_chat.py
docs/: phase2-twitch-chat-implementation.md  phase3-kick-chat-implementation.md  youtube.md
docs/plans/: 2026-03-16-pywebview-migration.md  2026-03-16-review-fixes-and-roadmap.md  2026-03-28-native-avplayer.md  2026-04-28-architecture-refactoring.md  2026-04-28-phase1-abc-restore.md  2026-04-28-phase2-api-decomposition.md  2026-04-28-phase3-frontend-modularization.md  2026-04-28-phase4-platform-strategy.md  2026-04-28-phase5-test-infrastructure.md
docs/prompts/: fix-kick-credentials-and-login.md  phase1-kick-platform.md  phase2-twitch-chat.md  phase3-kick-chat.md
docs/superpowers/plans/: 2026-03-28-phase0-architectural-refactor.md  2026-03-28-phase1-kick-platform.md  2026-03-28-phase2-twitch-chat.md  2026-03-31-phase3-kick-chat.md  2026-04-02-phase4-youtube-platform.md  2026-04-04-stability-fixes.md  2026-04-08-api-decomposition.md  2026-04-08-parallel-platform-fetch.md  (+5 more)
tests/: conftest.py  test_api.py  test_app.py  test_app_lifecycle.py  test_browse_api.py  test_browse_cache.py  test_channel_api.py  test_chat_models.py  test_import_follows.py  test_kick.py  test_launcher.py  test_native_player.py  test_oauth_flow.py  test_oauth_server.py  test_platform_models.py  test_platforms.py  test_recorder.py  test_sidebar.py  test_storage.py  test_stream_grid.py  test_stream_resolver.py  test_third_party_emotes.py  test_twitch.py  test_uiux_settings.py  test_utils.py  test_watch_stats.py
tests/chats/: test_kick_chat.py  test_twitch_chat.py  test_youtube_chat.py
ui/: api.py  index.html  native_player.py  player_bar.py  sidebar.py  stream_grid.py  theme.py
ui/api/: __init__.py  _base.py  auth.py  chat.py  data.py  favorites.py  images.py  streams.py
ui/css/: components.css  layout.css  player.css  reset.css  tokens.css  views.css
ui/js/: api-bridge.js  browse.js  callbacks.js  channel.js  chat.js  context-menu.js  init.js  keyboard.js  multistream.js  palette.js  player.js  render.js  settings.js  sidebar.js  state.js  utils.js
(+6 files in other folders)
