[project]
name = "twitchx"
version = "0.1.0"
description = "Lightweight Twitch stream client for macOS"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "ui"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.15.6",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
ignore = [".venv"]
