[project]
name = "twitchx"
version = "0.1.0"
description = "Lightweight Twitch stream client for macOS"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.14.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "pyobjc-framework-avfoundation>=12.1",
    "pyobjc-framework-avkit>=12.1",
    "pywebview>=5.0",
    "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.15.6",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
ignore = [".venv", "ui/native_player.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=core",
    "--cov=ui",
    "--cov-report=term-missing",
]
